tests/rosetta/out/Pascal/active-directory-connect.error
fpc: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/active-directory-connect.pas
active-directory-connect.pas(41,13) Error: Incompatible types: got "LDAPClient" expected "Variant"
active-directory-connect.pas(42,20) Error: Incompatible type for arg no. 1: Got "Variant", expected "LDAPClient"
active-directory-connect.pas(54) Fatal: There were 2 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
